# asteroids_multiplayer_pygame

./: README.md  main.py  pyproject.toml
client/: audio.py  audio_manager.py  camera.py  controls.py  game.py  renderer.py  spectator_camera.py
core/: collisions.py  config.py  entities.py  utils.py  world.py
docs/: ARCHITECTURE.md  CODE_REVIEW.md  COMO_JOGAR.md  PERF_BASELINE.md
multiplayer/: hud.py  player.py  snapshot.py
scripts/: profile_tick.py  server_health.py
server/: main.py  protocol.py
tests/: test_asteroid_poly_seed.py  test_collisions.py  test_freeze_powerup.py  test_laser_snapshot.py  test_match_lifecycle.py  test_player_colors.py  test_profile_script.py  test_protocol.py  test_scoreboard_hud.py  test_server_room_registry.py  test_snapshot_roundtrip.py  test_spectator_camera.py  test_world_respawn.py
