[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "asteroids-multiplayer"
version = "0.1.0"
description = "LAN deathmatch multiplayer Asteroids. Didactic client-server project."
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Jucimar Maia da Silva Jr" }]
dependencies = [
    "pygame>=2.1,<3",
    "websockets>=13,<17",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "pytest>=8"]

[tool.setuptools]
packages = ["core", "client", "server", "multiplayer"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
